Update issue templates

--- a/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
@@ -1,8 +1,8 @@
 ---
-name: ":exclamation: 이슈 생성 템플릿"
+name: 이슈 생성 템플릿
 about: 해당 템플릿을 이용해서 이슈를 등록하세요.
-title: ''
-labels: ''
+title: "[이슈] 책제목-과목"
+labels: question
 assignees: ''
 
 ---
