Update issue templates

--- a/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
@@ -1,19 +1,23 @@
 ---
 name: 이슈 생성 템플릿
 about: 해당 템플릿을 이용해서 이슈를 등록하세요.
-title: "[이슈] 책제목-과목"
-labels: question
+title: "[이슈] "
+labels: bug
 assignees: ''
 
 ---
 
++ 목차: 책제목 - 대분류 - 중분류 -소분류
++ 버전 : Oracle19c
+
 ### 1. 문제
-+ 버전 : Oracle 19gc 
 + 문제에 대해 상세하게 기술
 ```SQL
 -- 쿼리 기입
 ```
 
 ### 2. 시도해본 방법
-
+1.
+2. 
 ### 참조
++ 책제목
