--- a/3회차/3회차_박은주.md
+++ b/3회차/3회차_박은주.md
@@ -74,7 +74,7 @@
 		+ **랜덤 액세스**와 **Single Block I/O** 방식으로 데이터를 읽는다.
 + 데이터베이스 저장 구조
 	+ 테이블스페이스(Tablespace)
-		+ 데이터베이스의 논리적 저장 공간을 의미하며 세그먼트를 담는 컨테이너이다.
+		+ 데이터베이스의 논리적 저장 공간을 의미하며 여러 개의 세그먼트로 구성된다.
 	+ 세그먼트(Segment)
 		+ 테이블, 인덱스는 각각 하나의 세그먼트를 가지게 되며 여러 개의 익스텐트로 구성된다.
 	+ 익스텐트(Extent)
