--- a/3회차/3회차_박은주.md
+++ b/3회차/3회차_박은주.md
@@ -131,7 +131,7 @@
 		+ 인덱스의 첫번째 컬럼의 고유한 값들을 그룹으로 나누어 검색한다.
 		+ 선행 컬럼의 고유값이 적을 때 효과적이며 Table Full Scan을 방지 할 수 있다.
 	+ Index Fast Full Scan
-		+ 인덱슬르 전체적으로 읽으면서 데이터를 스캔하는 방식이다.
+		+ 인덱스를 전체적으로 읽으면서 데이터를 스캔하는 방식이다.
 		+ 인덱스에 포함된 컬럼만 조회 가능하다.
 		```sql
 		-- EMP_NO 컬럼이 인덱스에 포함되어 있다면 Index Fast Full Scan 가능하다.
