--- a/3회차/3회차_고현아.md
+++ b/3회차/3회차_고현아.md
@@ -135,3 +135,107 @@
   단 두 항목에는 디스크에서 가져와서 캐시에 적재된 블록이 포함되어있음 유의
 <br>
 <br>
+
+---
+## [과목3] 친절한 SQL 튜닝 2장 인덱스 기본
+
+### 1. 인덱스 구조 및 탐색
+- 인덱스 튜닝 방법 2가지
+  1) 인덱스 스캔 과정을 효율화  
+  2) 랜덤 액세스 최소화(인덱스 스캔 후 테이블 액세스 횟수)  
+- 인덱스 구조: 일반적으로 B-Tree(Balanced Tree) 인덱스를 이용함  
+  ※root: 트리의 시작점(최상위 노드)  
+  ※branch: Root와 Leaf(리프, 말단 노드) 사이에 위치하는 중간 노드,  
+   데이터를 정리하고 탐색 경로를 안내하는 역할, 데이터가 삽입·삭제될 때 Split(분할) 또는 Merge(병합)가 발생할 수 있음  
+  ※leaf: 트리의 가장 아래, 실제 데이터를 저장하는 노드
+    리프 블록끼리는 앞뒤 블록에 대한 주소값을 가짐(양방향 연결 리스트)
+	모든 리프 노드는 동일한 레벨(높이)를 유지(균형 트리 구조)
+  ※LMC(Leftmost Child): 
+  ※루트에서 리프 블록까지의 height 는 상항 동일함
+- 인덱스 탐색 과정
+  1) 수직적 탐색: 인덱스 스캔 시작 지점 찾기
+  2) 수평적 탐색: 데이터를 찾기
+- 결합 인덱스 생성시 컬럼 배치 순서: 값의 중복이 적은 컬럼이 앞에 와야한다는 말은 틀림!
+<br>
+<br>
+
+### 2. 인덱스 기본 사용법
+- Index Range Scan: 리프 블록 일부만 스캔
+- Index Full Scan: 리프 블록 전체 스캔
+- 인덱스 컬럼을 가공(ex substr)하여 검색시 Range 불가, 풀스캔됨 주의  
+  가공않고 or 조건으로 2개 인덱스 컬럼 동시 조회시에도 풀스캔임   
+  union all 이나 use_concat 힌트 이용해서 따로 검색해야함  
+  1개의 인덱스 컬럼에 대해서도 in 조건절이 있으면 or 취급이지만,  
+  옵티마이저가 in-list interator 방식으로 쿼리를 변환하여 부분 스캔 되도록 처리해줌  
+- 결합 인덱스 중 일부만으로 인덱스 태우려면 비가공된 선두 컬럼이 조건절에 있어야함
+- 인덱스는 이미 정렬되어 있으므로, order by 조건이 있어도 실제 연산을 수행하지 않을 수 있음(생략 가능)  
+  order by 또는 select 절에서 가공했다면 연산 생략 불가(max, min은 생략할 수 있음)  
+- 자동형변환을 해주긴 하지만, 명시적으로 쓰기 권장함
+- 선택적으로 활성화되는 조건절에 like 를 쓰기도 하지만, 인덱트 태울거면 비추
+<br>
+<br>
+
+### 3. 인덱스 확장기능 사용법
+- Index Unique Scan: 온전한 인덱스 컬럼에 대해 = 조건으로 검색할 때, 수직 탐색만으로 스캔 가능
+- Index Skip Scan: 선행 컬럼들에 대한 조건 없이, 후행 일부 컬럼만으로 검색을 빠르게 하고 싶을 때 사용
+- Index Fast Full Scan: 인덱스 구조 상관 없이 세그먼트 전체를 순서대로 스캔  
+  인덱스에 포함된 컬럼으로만 검색 가능, 병렬 스캔 가능  
+<br>
+<br>
+
+---
+## [과목3] 친절한 SQL 튜닝 3장 인덱스 튜닝
+
+### 1. 테이블 액세스 최소화
+- Index rowid: 논리적인 주소임. 디스크상에 있는 파일의 블록, 레코드 정보를 가짐  
+  메모리에 올라가 있지 않으니 물리적 주소일 수 없고 때문에 메모리 DB 보다는 느릴 수 밖에 없음  
+- 인덱스 클러스터링 팩터: 군집성 계수로 CF가 낮을수록 검색 효율이 좋음(인덱스 범위 스캔 성능이 좋음)  
+  인덱스 정렬 순서와, 실제 테이블 데이터의 저장 순서가 일치하는 정도를 나타내는 값
+- 인덱스 손익분기점: Table Full Scan 은 비용이 일정(건수에 대한 소요시간)하므로, Index Range Scan 비용과
+  교차하는 지점이 손익분기점임. 보통 추출 건수의 5~20% 수준에서 잡히지만 CF가 낮다면 90% 까지 갈 수도 있음
+- 온라인 프로그램 대상 튜닝(OLTP): 소량 데이터에 대한 조회 및 수정이 이루어지므로 인덱스, Nested Loop 조인 등 활용
+- 배치 프로그램 대상 튜닝: 일괄 전체 처리가 많으므로 Full Scan, 해시 조인 활용
+- 인덱스 구조 테이블(Index-Organized Table): 랜덤 액세스 발생않는 인덱스 구조로 이루어진 테이블
+- 클러스터 테이블: 공통된 키 값을 가진 데이터들을 물리적으로 같은 블록에 저장하여 검색 성능을 향상시키는 기법
+  1) 인덱스 클러스터 테이블: 클러스터 키(공통된 키 값)를 기반으로 B-Tree 인덱스를 생성하여 데이터 저장 
+     여러 테이블이 같은 클러스터를 공유할 수 있음 (조인이 자주 발생하는 테이블에 유리)    
+  2) 해시 클러스터 테이블: B-Tree 인덱스를 사용하지 않고, 해시 함수를 이용해 데이터 저장 위치를 결정  
+     범위 검색이 비효율적, 특정 키 값을 통한 검색에 최적화
+<br>
+<br>
+
+### 2. 부분범위 처리 활용
+- 부분범위 처리: 쿼리 결과집합을 사용자로부터 Fetch Call 있을 때만 일정량씩 나누어 전송하는 것
+- order by 조건으로 정렬이 필요한 경우에는 해당 작업이 끝나야 전송 가능하므로 부분범위 처리 불가
+- limit, offset fetch, rowmun, top 등
+- DB 에서 기본적으로 부분범위 처리를 해주는 것이 아님! DB 접속툴이나 개발 앱에서 처리해줘야함!
+- 랜덤 I/O 성능을 위해 배치 I/O 기능이 추가되었음. 디스크 I/O 일괄 처리할 수 있으나 정렬 순서 보장 안됨
+  (batch_table_access_by_rowid 힌트)
+<br>
+<br>
+
+### 3. 인덱스 스캔 효율화
+- 인덱스 스캔 효율성
+  1) 인덱스 액세스 조건: 수직적 탐색 및 리프 블록 스캔 범위 결정에 영향
+  2) 인덱스 필터 조건: 테이블로의 액세스 여부 결정
+  3) 테이블 필터 조건: 쿼리 수행 다음 단계로 전달하거나 최종 결과집합에 포함할지를 결정?? 뭐를???? 어디로??
+- 검색 조건과 컬럼에 따른 군집성
+  선행 컬럼에 대한 조건이 등치(=) 이고, 그 이후 첫번째 범위검색 조건(\<=, \>=)까지는  
+  연속된(모여있는) 레코드에서 결과를 가져올 수 있음. 범위검색 조건 이후의 조건들을 만족하는 레코드는  
+  연산 종류와 관계 없이 흩어진 레코드에서 데이터를 찾게 됨
+  → 모두 등치 조건으로 주는 것이 가장 효율 좋다
+- 범위검색 조건(between)을 in-list 로 변경: in-list 개수가 많거나, 각 값이 가까이 위치해 있다면 비효율이니 주의  
+- 206p 더 쉬운예: 상품ID가 PK로 인덱스 생성 되었기 때문에, in-list 방식은 의미가 없음
+  통상 선행 컬럼이 where 조건에 없을 때 이용하는 방식이고, 명시적으로 걸어도 range scan 될 수 있음
+  상품구분코드는 선택도가 낮기(중복값이 많음) 때문에 인덱스를 타도 효율이 좋지 않을 것
+- between 과 like: 
+  월별 통계 등 날짜 조회할 경우에는 between 쓰도록 하자
+  between 이용시, 인덱스 선두 컬럼이나 null 허용 컬럼에 대해서는 쓰지 말아야함
+  like 이용시, 위 두 가지 경우 포함하여 숫자형 컬럼이나 가변 길이 컬럼에 쓰지 말아야함
+- 인덱스에 not null 컬럼이 있어 모든 테이블 레코드가 인덱스에 저장되어있다면, 18c 부터는 or 조건도 인덱스 필터 가능
+<br>
+<br>
+
+### 4. 인덱스 설계
+<br>
+<br>
