--- a/4회차/4회차_박은주.md
+++ b/4회차/4회차_박은주.md
@@ -193,6 +193,16 @@ SELECT /*+ ordered use_hash(B) */
 ### 6.2 Direct Path I/O 활용
 ### 6.3 파티션을 활용한 DML 튜닝
 ### 6.4 Lock과 트랜잭션 동시성 제어
++ DML Lock
+    + 로우 Lock
+        + 동시에 같은 행을 변경하는 것을 방지한다.
+        + UPDATE, DELETE 수행 시 항상 발생한다.
+        + INSERT의 경우에도 Row Lock이 발생하지만, 일반적으로 충돌 가능성이 적다.
+        + 다만 Unique 인덱스가 있는 경우 동일한 키 값 입력 시 충돌로 인해 추가적인 Row Lock이 발생할 수 있다.
+    + 테이블 Lock(TM Lock)
+        + DML을 수행할 때 테이블에 TM Lock이 설정된다.
+        + 이는 자신이 현재 해당 테이블에서 DML 작업을 수행 중임을 알리는 일종의 Flag 역할을 한다.
+        + 테이블 구조 변경(DDL)과의 충돌을 방지하는 역할을 한다.
 ---
 ## 7장 SQL 옵티마이저
 ### 7.1 통계정보와 비용 계산 원리
