--- a/5회차/5회차_고현아.md
+++ b/5회차/5회차_고현아.md
@@ -49,7 +49,7 @@
   select * from table(dbms_xplan.display_cursor(null, null, 'allstats last'));
  ```
 - 10046 trace: SQL 실행시의 성능 정보를 기록하는 SQL 트레이스 모드
-  ![10046trace](/../img/20250329_001.png)
+  ![10046trace](https://raw.githubusercontent.com/ISFX-Study/sqlp-study/main/img/5/20250329_001.png)
 - recursive calls(Auto Trace 항목): call count(SQL Trace 항목)
 - 대기 이벤트 기반(응답 시간 분석, RTA) 성능관리 방법론
 - AWR(Automatic Workload Repository): Statspack(Ratio 기반 성능 분석 + 응답 시간 분석 방법론)을 확장함
